--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.5.9",
-    "illuminate/support": "5.4.*",
-    "laravelcollective/html": "^5.4"
+    "php": ">=7.2",
+    "illuminate/support": "8.*",
+    "laravelcollective/html": "^8.*"
   },
   "requireDev": {
   },
