--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=7.2",
-    "illuminate/support": "8.*",
-    "laravelcollective/html": "^8.*"
+    "illuminate/support": "~6.0|~7.0|~8.0",
+    "laravelcollective/html": "~8.0"
   },
   "requireDev": {
   },
